--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,12 +215,12 @@ jobs:
             if grep -q "has been executed successfully." migrations_dump.txt 
             then
               echo "insecure" >> ~/.curlrc
-              curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_3b6bdb9 -d '1'
+              curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\} -d '1'
             fi
             if grep -q "No migrations are pending" migrations_dump.txt 
             then
               echo "insecure" >> ~/.curlrc
-              curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_3b6bdb9 -d '1'
+              curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\} -d '1'
             fi
       # Here's where you will add some code to rollback on failure
   deploy-frontend:
@@ -312,7 +312,7 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-            ipAddress=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-3b6bdb9" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
+            ipAddress=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             echo "${ipAddress}"
             export API_URL="http://${ipAddress}:3030"
             echo "${API_URL}"
@@ -325,7 +325,7 @@ jobs:
       - run:
           name: Frontend smoke test.
           command: |
-            URL="http://udapeople-3b6bdb9.s3-website-us-east-1.amazonaws.com/#/employees"
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
             echo ${URL}
             if curl -s ${URL} | grep "Welcome"
             then
@@ -336,10 +336,30 @@ jobs:
             fi
       # Here's where you will add some code to rollback on failure
       - revert-migrations
+      - destroy-environment
 
 workflows:
   default:
     jobs:
-      - run-migrations
-      - smoke-test:
+      - build-frontend
+      - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
+      - deploy-frontend:
           requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
+      - smoke-test:
+          requires: [deploy-frontend, deploy-backend]
