--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -212,16 +212,20 @@ jobs:
             # Your code here
             cd backend
             cat migrations_dump.txt 
-            if grep -q "has been executed successfully." migrations_dump.txt 
+            cat migrations_dump.txt | grep "has been executed successfully."
+            cat migrations_dump.txt | grep "No migrations are pending" 
+            if grep "has been executed successfully." migrations_dump.txt 
             then
               echo "insecure" >> ~/.curlrc
               curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\} -d '1'
             fi
-            if grep -q "No migrations are pending" migrations_dump.txt 
+            if grep "No migrations are pending" migrations_dump.txt 
             then
               echo "insecure" >> ~/.curlrc
               curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\} -d '1'
             fi
+            echo "kvdb content"
+            echo $(curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\})
       # Here's where you will add some code to rollback on failure
   deploy-frontend:
     docker:
@@ -341,25 +345,4 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires: [build-frontend]
-      - test-backend:
-          requires: [build-backend]
-      - scan-backend:
-          requires: [build-backend]
-      - scan-frontend:
-          requires: [build-frontend]
-      - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
-      - deploy-frontend:
-          requires: [run-migrations]
-      - deploy-backend:
-          requires: [run-migrations]
-      - smoke-test:
-          requires: [deploy-frontend, deploy-backend]
+      - run-migrations
