--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,11 +17,10 @@ commands:
       - run:
           name: Revert migrations
           # Add when this will run
-          # when: on_fail
+          when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
             echo "insecure" >> ~/.curlrc
-            echo $(curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\})
             export success=$(curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\})
             echo "success = $success"
             if(( $success == '1' )); 
@@ -226,8 +225,9 @@ jobs:
             fi
             echo "kvdb content"
             echo $(curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\})
-      - revert-migrations
       # Here's where you will add some code to rollback on failure
+      - revert-migrations
+      - destroy-environment
       
   deploy-frontend:
     docker:
@@ -343,8 +343,49 @@ jobs:
       # Here's where you will add some code to rollback on failure
       - revert-migrations
       - destroy-environment
+  cloudfront-update:
+    docker:
+      # Docker image here that supports AWS CLI
+      - image: amazon/aws-cli
+    steps:
+      # Checkout code from git
+      - checkout
+      - run:
+          name: Update cloudfront distribution
+          command: |
+          aws cloudformation deploy \ 
+            --template-file .circleci/files/cloudfront.yml \ 
+            --stack-name cloudFrontStack \ 
+            --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \ 
+            --tags project=udapeople
+      # Here's where you will add some code to rollback on failure
+      - revert-migrations
+      - destroy-environment
 
 workflows:
   default:
     jobs:
-      - run-migrations
+      - build-frontend
+      - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
+      - deploy-frontend:
+          requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
+      - smoke-test:
+          requires: [deploy-frontend, deploy-backend]
+      - cloudfront-update:
+          requires: [smoke-test]
