--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -350,23 +350,22 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
-      - attach_workspace:
-          at: ~/
       - run:
           name: Update cloudfront distribution
           command: |
             export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?name==WorkflowID].Value" --no-paginate --output text)
             echo "OldWorkflowID: ${OldWorkflowID}"
             echo "CIRCLE_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}"
-            echo "${OldWorkflowID}" > ~/OldWorkflowId.txt
+            echo "${OldWorkflowID}" > .circleci/ansibleOldWorkflowId.txt
             aws cloudformation deploy \ 
               --template-file .circleci/files/cloudfront.yml \ 
               --stack-name initialStack \ 
-              --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \ 
+              --parameter-overrides WorkflowID="udapeople-1125972" \ 
               --tags project=udapeople
       - persist_to_workspace:
           root: ~/
-          paths: ~/OldWorkflowId.txt
+          paths: 
+            - project/.circleci/ansible/OldWorkflowId.txt
 
       # Here's where you will add some code to rollback on failure
       - revert-migrations
@@ -382,11 +381,9 @@ jobs:
           name: Get old stack workflow id
           command: |
             # your code here
-            # export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?name==WorkflowID].Value" --no-paginate --output text)
-            # echo OldWorkflowID: "${OldWorkflowID}"
-            cat ~/OldWorkflowId.txt
-            export OldWorkflowID=$(cat ~/OldWorkflowId.txt)
-            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+            cat ~/project/.circleci/ansible/OldWorkflowId.txt
+            export OldWorkflowID=$(cat ~/project/.circleci/ansible/OldWorkflowId.txt)
+            echo "CIRCLE_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}"
             export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
             echo "${STACKS[@]}"
       - run:
@@ -402,29 +399,6 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires: [build-frontend]
-      - test-backend:
-          requires: [build-backend]
-      - scan-backend:
-          requires: [build-backend]
-      - scan-frontend:
-          requires: [build-frontend]
-      - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
-      - deploy-frontend:
-          requires: [run-migrations]
-      - deploy-backend:
-          requires: [run-migrations]
-      - smoke-test:
-          requires: [deploy-frontend, deploy-backend]
-      - cloudfront-update:
-          requires: [smoke-test]
+      - cloudfront-update
       - cleanup:
           requires: [cloudfront-update]
