--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -357,11 +357,7 @@ jobs:
             echo "OldWorkflowID: ${OldWorkflowID}"
             echo "CIRCLE_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}"
             echo "${OldWorkflowID}" > .circleci/ansibleOldWorkflowId.txt
-            aws cloudformation deploy \ 
-              --template-file .circleci/files/cloudfront.yml \ 
-              --stack-name initialStack \ 
-              --parameter-overrides WorkflowID="udapeople-1125972" \ 
-              --tags project=udapeople
+            aws cloudformation deploy --template-file .circleci/files/cloudfront.yml --stack-name initialStack --parameter-overrides WorkflowID="udapeople-1125972" --tags project=udapeople
       - persist_to_workspace:
           root: ~/
           paths: 
