--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -388,16 +388,18 @@ jobs:
             cd .circleci/ansible
             ls
             cat OldWorkflowId.txt
-            export OldWorkflowID=$(cat .circleci/ansible/OldWorkflowId.txt)
+            export OLD_WORKFLOW_ID=$(cat OldWorkflowId.txt)
+            echo "OLD_WORKFLOW_ID: ${OLD_WORKFLOW_ID}"
             echo "CIRCLE_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}"
             export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
             echo "${STACKS[@]}"
       - run:
           name: Remove old stacks and files
           command: |
-            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+            if printf '%s\n' "${STACKS[@]}" | grep -q "$OLD_WORKFLOW_ID";
             then
-              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+              echo "Removing stacks with workflow id: ${OLD_WORKFLOW_ID}"
+              aws s3 rm "s3://udapeople-${OLD_WORKFLOW_ID}" --recursive
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OLD_WORKFLOW_ID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OLD_WORKFLOW_ID}"
             fi
