--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -382,21 +382,15 @@ jobs:
       - attach_workspace:
           at: ~/
       - run:
-          name: Get old stack workflow id
+          name: Remove old stacks and files
           command: |
-            # your code here
             cd .circleci/ansible
-            ls
-            cat OldWorkflowId.txt
             export OLD_WORKFLOW_ID=$(cat OldWorkflowId.txt)
             echo "OLD_WORKFLOW_ID: ${OLD_WORKFLOW_ID}"
             echo "CIRCLE_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}"
             export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
             echo "${STACKS[@]}"
-      - run:
-          name: Remove old stacks and files
-          command: |
-            if printf '%s\n' "${STACKS[@]}" | grep -q "$OLD_WORKFLOW_ID";
+            if printf '%s\n' "${STACKS[@]}" | grep -q "${OLD_WORKFLOW_ID}";
             then
               echo "Removing stacks with workflow id: ${OLD_WORKFLOW_ID}"
               aws s3 rm "s3://udapeople-${OLD_WORKFLOW_ID}" --recursive
