--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -359,14 +359,13 @@ jobs:
           command: |
             export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?name==WorkflowID].Value" --no-paginate --output text)
             echo "OldWorkflowID: ${OldWorkflowID}"
-            echo "CIRCLE_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}"
+            echo "CurrentWorkflowId: ${CIRCLE_WORKFLOW_ID:0:7}"
             echo "${OldWorkflowID}" > .circleci/ansible/OldWorkflowId.txt
-            aws cloudformation deploy --template-file .circleci/files/cloudfront.yml --stack-name initialStack --parameter-overrides WorkflowID="udapeople-1125972" --tags project=udapeople
+            aws cloudformation deploy --template-file .circleci/files/cloudfront.yml --stack-name initialStack --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --tags project=udapeople
       - persist_to_workspace:
           root: ~/
           paths: 
             - project/.circleci/ansible/OldWorkflowId.txt
-
       # Here's where you will add some code to rollback on failure
       - revert-migrations
       - destroy-environment
@@ -401,6 +400,29 @@ jobs:
 workflows:
   default:
     jobs:
-      - cloudfront-update
+      - build-frontend
+      - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
+      - deploy-frontend:
+          requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
+      - smoke-test:
+          requires: [deploy-frontend, deploy-backend]
+      - cloudfront-update:
+          requires: [smoke-test]
       - cleanup:
           requires: [cloudfront-update]
